Fix illegal range creation for cite templates